<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.recypapp.recypapp.SearchFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="14dp"
            android:padding="14dp">

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:padding="14dp"
                android:hint="@string/prompt_contiene"
                android:layout_gravity="center_horizontal"
                android:id="@+id/nombreContiene" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:padding="14dp"
                android:hint="@string/comensales"
                android:layout_gravity="center_horizontal"
                android:id="@+id/nComensales" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:padding="14dp"
                android:hint="@string/min_dur"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:id="@+id/dur_min" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:padding="14dp"
                android:hint="@string/max_dur"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:id="@+id/dur_max" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_tag"
                android:id="@+id/buttonTags"
                android:layout_gravity="center_horizontal"
                android:padding="14dp" />

            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_section1"
                android:id="@+id/searchButton"
                android:layout_gravity="center" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>
