<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.recypapp.recypapp.EditRecetaActivity"
    android:orientation="vertical"
    android:background="@android:color/white">

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent" android:layout_height="160dp"
                android:background="@color/ColorPrimary">

                <ImageView
                    android:id="@+id/imgView"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:src="@drawable/example_receta"
                    android:clickable="true"
                    android:onClick="goGallery"
                    android:layout_centerInParent="true" />
            </RelativeLayout>

            <EditText
                android:id="@+id/recype_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_name_receta"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:hint="@string/comensales"
                android:layout_gravity="center_horizontal"
                android:id="@+id/nComensales" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:hint="@string/prompt_duration_receta"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:id="@+id/duration" />

            <EditText
                android:inputType="textMultiLine"
                android:hint="@string/prompt_description_receta"
                android:minLines="6"
                android:gravity="top|left"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/description" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Button android:id="@+id/listIngredientes"
                    android:layout_width="0dp" android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="16dp" android:text="@string/button_ingredientes"
                    android:onClick="modIngredientes"/>

                <Button
                    android:id="@+id/listTags"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/button_tags"
                    android:onClick="SelectTags"/>
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Confirmar"
                android:onClick="Confrimar"
                android:id="@+id/modificarReceta" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
