<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.recypapp.recypapp.PerfilActivity"
    android:background="@android:color/white">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent" android:layout_height="120dp"
                android:background="@color/ColorPrimary">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgView"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_user_default"
                    android:clickable="true"
                    android:onClick="goGallery"
                    android:layout_centerInParent="true" />

            </RelativeLayout>

            <AutoCompleteTextView
                android:id="@+id/nick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_nick"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:singleLine="true"
                android:text="Email"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" />

            <EditText
                android:id="@+id/password_actual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText android:id="@+id/password" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_password_new"
                android:imeOptions="actionUnspecified" android:inputType="textPassword"
                android:maxLines="1" android:singleLine="true" />

            <EditText
                android:id="@+id/password_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password_new_again"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Button android:id="@+id/cerrar_sesion"
                    android:layout_width="0dp" android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="16dp" android:text="@string/action_log_cout"
                    android:onClick="GoLogin"/>

                <Button
                    android:id="@+id/modificarPerfil"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_mod"/>
            </LinearLayout>

            <Button
                android:id="@+id/buttonDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Darse de baja"
                android:onClick="Delete" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>

